--- a/features.html
+++ b/features.html
@@ -82,6 +82,40 @@
             opacity: 0.8;
         }
 
+        .cart-icon {
+            background: none;
+            border: none;
+            color: white;
+            cursor: pointer;
+            font-size: 1.5rem;
+            position: relative;
+            padding: 0;
+            transition: opacity 0.3s;
+        }
+
+        .cart-icon:hover,
+        .cart-icon:focus {
+            opacity: 0.8;
+            outline: 2px solid rgba(255, 255, 255, 0.5);
+            border-radius: 4px;
+        }
+
+        .cart-badge {
+            position: absolute;
+            top: -8px;
+            right: -8px;
+            background: #e74c3c;
+            color: white;
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 0.75rem;
+            font-weight: bold;
+        }
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
@@ -130,10 +164,32 @@
             padding: 2rem;
             margin-top: 3rem;
         }
+
+        .skip-link {
+            position: absolute;
+            top: -40px;
+            left: 0;
+            background: #667eea;
+            color: white;
+            padding: 0.5rem 1rem;
+            z-index: 101;
+            text-decoration: none;
+        }
+
+        .skip-link:focus {
+            top: 0;
+        }
+
+        button:focus-visible,
+        a:focus-visible {
+            outline: 3px solid #ff0000;
+            outline-offset: 2px;
+        }
     </style>
 </head>
 
 <body>
+    <a href="#main-content" class="skip-link">Zum Hauptinhalt springen</a>
     <header>
         <nav>
             <div class="brand">
@@ -148,16 +204,16 @@
                 <a href="lizenz.html">Lizenz</a>
                 <a href="kontakt.html">Kontakt</a>
                 <a href="datenschutz.html">Datenschutz</a>
-                <span class="cart-icon" onclick="location.href='warenkorb.html'">
+                <button class="cart-icon" onclick="location.href='warenkorb.html'" aria-label="Warenkorb">
                     🛒
                     <span class="cart-badge" id="cartCount">0</span>
-                </span>
+                </button>
             </div>
         </nav>
     </header>
 
     <div class="container">
-        <section class="section" id="features">
+        <section class="section" id="main-content" id="features">
             <h3>Wir bieten</h3>
             <div class="features">
                 <div class="feature-card">
@@ -183,7 +239,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2026 EduSphere. All rights reserved.</p>
+        <p>&copy; 2026 EduSphere. All rights reserved. | <a href="impressum.html" style="color: #667eea; text-decoration: none;">Impressum</a> | <a href="barrierefreiheit.html" style="color: #667eea; text-decoration: none;">Barrierefreiheit</a> | <a href="datenschutz.html" style="color: #667eea; text-decoration: none;">Datenschutz</a></p>
     </footer>
 </body>
 
