--- a/index.html
+++ b/index.html
@@ -82,6 +82,40 @@
 			opacity: 0.8;
 		}
 
+		.cart-icon {
+			background: none;
+			border: none;
+			color: white;
+			cursor: pointer;
+			font-size: 1.5rem;
+			position: relative;
+			padding: 0;
+			transition: opacity 0.3s;
+		}
+
+		.cart-icon:hover,
+		.cart-icon:focus {
+			opacity: 0.8;
+			outline: 2px solid rgba(255, 255, 255, 0.5);
+			border-radius: 4px;
+		}
+
+		.cart-badge {
+			position: absolute;
+			top: -8px;
+			right: -8px;
+			background: #e74c3c;
+			color: white;
+			border-radius: 50%;
+			width: 20px;
+			height: 20px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-size: 0.75rem;
+			font-weight: bold;
+		}
+
 		.hero {
 			background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
 			color: white;
@@ -102,7 +136,7 @@
 
 		.btn {
 			background: white;
-			color: #667eea;
+			color: #000000;
 			padding: 0.8rem 2rem;
 			border: none;
 			border-radius: 5px;
@@ -139,10 +173,159 @@
 			padding: 2rem;
 			margin-top: 3rem;
 		}
+
+		.skip-link {
+			position: absolute;
+			top: -40px;
+			left: 0;
+			background: #667eea;
+			color: white;
+			padding: 0.5rem 1rem;
+			z-index: 101;
+			text-decoration: none;
+		}
+
+		.skip-link:focus {
+			top: 0;
+		}
+
+		.contact-form input:focus-visible,
+		.contact-form textarea:focus-visible {
+			outline: 3px solid #667eea;
+			outline-offset: 2px;
+			box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+		}
+
+		/* Cookie Banner */
+		.cookie-banner {
+			position: fixed;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			background: #2c3e50;
+			color: white;
+			padding: 1.5rem 2rem;
+			box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+			z-index: 999;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			gap: 2rem;
+			font-size: 0.95rem;
+			max-height: 150px;
+			overflow-y: auto;
+		}
+
+		.cookie-banner__content {
+			flex: 1;
+		}
+
+		.cookie-banner__content p {
+			margin: 0;
+			line-height: 1.5;
+		}
+
+		.cookie-banner__content a {
+			color: #667eea;
+			text-decoration: underline;
+		}
+
+		.cookie-banner__content a:hover,
+		.cookie-banner__content a:focus {
+			color: #764ba2;
+		}
+
+		.cookie-banner__actions {
+			display: flex;
+			gap: 1rem;
+			flex-shrink: 0;
+			flex-wrap: wrap;
+			justify-content: flex-end;
+		}
+
+		.cookie-banner__button {
+			padding: 0.6rem 1.2rem;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+			font-size: 0.9rem;
+			font-weight: bold;
+			transition: all 0.3s;
+			white-space: nowrap;
+		}
+
+		.cookie-banner__button--accept {
+			background: #667eea;
+			color: white;
+		}
+
+		.cookie-banner__button--accept:hover,
+		.cookie-banner__button--accept:focus {
+			background: #764ba2;
+			outline: 2px solid rgba(255, 255, 255, 0.5);
+			outline-offset: 2px;
+		}
+
+		.cookie-banner__button--reject {
+			background: transparent;
+			color: white;
+			border: 1px solid white;
+		}
+
+		.cookie-banner__button--reject:hover,
+		.cookie-banner__button--reject:focus {
+			background: rgba(255, 255, 255, 0.1);
+			outline: 2px solid rgba(255, 255, 255, 0.5);
+			outline-offset: 2px;
+		}
+
+		.cookie-banner__close {
+			background: none;
+			border: none;
+			color: white;
+			font-size: 1.5rem;
+			cursor: pointer;
+			padding: 0.5rem;
+			transition: opacity 0.3s;
+		}
+
+		.cookie-banner__close:hover,
+		.cookie-banner__close:focus {
+			opacity: 0.7;
+			outline: 2px solid rgba(255, 255, 255, 0.5);
+			outline-offset: 2px;
+		}
+
+		@media (max-width: 768px) {
+			.cookie-banner {
+				flex-direction: column;
+				align-items: flex-start;
+				gap: 1rem;
+			}
+
+			.cookie-banner__actions {
+				width: 100%;
+				justify-content: flex-start;
+			}
+
+			.cookie-banner__close {
+				position: absolute;
+				top: 0.5rem;
+				right: 0.5rem;
+			}
+		}
+
+		.contact-form input:focus-visible,
+		.contact-form textarea:focus-visible {
+			outline: 3px solid #667eea;
+			outline-offset: 2px;
+			box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+		}
 	</style>
 </head>
 
 <body>
+	<a href="#main-content" class="skip-link">Zum Hauptinhalt springen</a>
 	<header>
 		<nav>
 			<div class="brand">
@@ -151,37 +334,94 @@
 					<span class="brand-text">EduSphere</span>
 				</a>
 			</div>
-            <div>
-                <a href="überuns.html">Über uns</a>
-                <a href="features.html">Features</a>
-                <a href="lizenz.html">Lizenz</a>
-                <a href="kontakt.html">Kontakt</a>
-                <a href="datenschutz.html">Datenschutz</a>
-                <span class="cart-icon" onclick="location.href='warenkorb.html'">
-                    🛒
-                    <span class="cart-badge" id="cartCount">0</span>
-                </span>
-            </div>
-        </nav>
+			<div>
+				<a href="überuns.html">Über uns</a>
+				<a href="features.html">Features</a>
+				<a href="lizenz.html">Lizenz</a>
+				<a href="kontakt.html">Kontakt</a>
+				<a href="datenschutz.html">Datenschutz</a>
+				<button class="cart-icon" onclick="location.href='warenkorb.html'" aria-label="Warenkorb">
+					🛒
+					<span class="cart-badge" id="cartCount">0</span>
+				</button>
+			</div>
+		</nav>
 	</header>
 
-	<section class="hero">
+	<main id="main-content">
+		<section class="hero">
 		<h2>EduSphere - Ihr Partner in Sachen Software</h2>
 		<p>Mit uns an Ihrer Seite sind Sie immer einen Schritt voraus</p>
-		<button class="btn" onclick="location.href='kontakt.html'">Get Started</button>
+		<button class="btn" onclick="location.href='lizenz.html'">Get Started</button>
 	</section>
 
 	<div class="container">
 		<section class="section">
 			<h3>Unsere Angebote</h3>
 			<p>Wir entwickeln DSGVO-konforme Schulsoftware, Stundenpläne, Analyse-Tools und individuelle Integrationen.
-				Besuchen Sie unsere Seiten für mehr Details.</p>
+				Besuchen Sie unsere Seite für mehr Details.</p>
 		</section>
-	</div>
+	</main>
 
 	<footer>
-		<p>&copy; 2026 EduSphere. All rights reserved.</p>
+		<p>&copy; 2026 EduSphere. All rights reserved. | <a href="impressum.html" style="color: #667eea; text-decoration: none;">Impressum</a> | <a href="barrierefreiheit.html" style="color: #667eea; text-decoration: none;">Barrierefreiheit</a> | <a href="datenschutz.html" style="color: #667eea; text-decoration: none;">Datenschutz</a></p>
 	</footer>
+
+	<!-- Cookie Banner -->
+	<div class="cookie-banner" id="cookieBanner" role="region" aria-label="Cookie Einwilligung">
+		<div class="cookie-banner__content">
+			<p>
+				Wir verwenden Cookies, um Ihre Erfahrung zu verbessern. Durch die Nutzung unserer Website stimmen Sie
+				unserer <a href="datenschutz.html">Datenschutzerklärung</a> zu.
+			</p>
+		</div>
+		<div class="cookie-banner__actions">
+			<button class="cookie-banner__button cookie-banner__button--reject" onclick="cookieBanner.reject()" aria-label="Cookies ablehnen">
+				Ablehnen
+			</button>
+			<button class="cookie-banner__button cookie-banner__button--accept" onclick="cookieBanner.accept()" aria-label="Cookies akzeptieren">
+				Akzeptieren
+			</button>
+		</div>
+		<button class="cookie-banner__close" onclick="cookieBanner.close()" aria-label="Cookie-Banner schließen">
+			✕
+		</button>
+	</div>
+
+	<script>
+		const cookieBanner = {
+			init: function() {
+				// Check if user has already made a choice
+				if (localStorage.getItem('cookieConsent')) {
+					document.getElementById('cookieBanner').style.display = 'none';
+				}
+			},
+			accept: function() {
+				localStorage.setItem('cookieConsent', 'accepted');
+				this.closeBanner();
+				console.log('Cookies accepted');
+				// In a real implementation, load tracking/analytics scripts here
+			},
+			reject: function() {
+				localStorage.setItem('cookieConsent', 'rejected');
+				this.closeBanner();
+				console.log('Cookies rejected');
+			},
+			close: function() {
+				// Just close without storing preference (must choose)
+				this.closeBanner();
+			},
+			closeBanner: function() {
+				const banner = document.getElementById('cookieBanner');
+				banner.style.display = 'none';
+			}
+		};
+		
+		// Initialize on page load
+		document.addEventListener('DOMContentLoaded', function() {
+			cookieBanner.init();
+		});
+	</script>
 </body>
 
 </html>
